--- a/public/style2/index.html
+++ b/public/style2/index.html
@@ -69,7 +69,7 @@
           <h3>Experiences</h3>
           <div class="experience">
             <h4>
-              <span class="experience-type">Man2ouche Seller @</span>
+              <span class="experience-type">Man2ouche Seller</span>
               <span class="experience-institution">Snack Edouard</span>
             </h4>
             <div class="experience-details">
@@ -95,12 +95,12 @@
           </div>
           <div class="experience">
             <h4>
-              <span class="experience-type">Man2ouche Seller @</span>
+              <span class="experience-type">Man2ouche Seller</span>
               <span class="experience-institution">Snack Edouard</span>
             </h4>
             <div class="experience-details">
               <span class="experience-location">
-               In Paris on
+                Paris
               </span>
               <span class="experience-date">
                 <span class="day">30</span>
@@ -124,7 +124,7 @@
           <h3>Education</h3>
           <div class="experience">
             <h4>
-              <span class="experience-type">Web Stack Training @</span>
+              <span class="experience-type">Web Stack Training</span>
               <span class="experience-institution">Codi</span>
             </h4>
             <div class="experience-details">
@@ -150,7 +150,7 @@
           </div>
           <div class="experience">
             <h4>
-              <span class="experience-type">Man2ouche Seller @</span>
+              <span class="experience-type">Man2ouche Seller</span>
               <span class="experience-institution">Snack Edouard</span>
             </h4>
             <div class="experience-details">
